[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://Main/HUD/UpgradeList.tscn" type="PackedScene" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Health" type="ProgressBar" parent="Control"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -33.0
margin_top = -14.0
margin_right = 33.0
grow_horizontal = 2
max_value = 6.0
percent_visible = false

[node name="Scrap" type="Label" parent="Control"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
grow_horizontal = 2

[node name="UpgradeContainer" parent="Control" instance=ExtResource( 2 )]

[connection signal="update_scrap" from="." to="Control/UpgradeContainer" method="_on_HUD_update_scrap"]
[connection signal="upgrade_system" from="Control/UpgradeContainer" to="." method="_on_UpgradeContainer_upgrade_system"]
